fix column-gap.

--- a/app/stylesheets/styles.scss
+++ b/app/stylesheets/styles.scss
@@ -166,7 +166,7 @@ body {
     -webkit-column-count: 1;
     -webkit-column-gap: 10px;
     column-count: 1;
-    column-gap: 20px;
+    column-gap: 10px;
   }
 }
 
